--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -189,18 +189,121 @@ emacs).
 
 * Slide: Outline                                                     :export:
 
-In this talk we will try to give a /distro view on XDP and eBPF/.
+In this talk we will give a /distro view on XDP/.
+We will also touch related general eBPF topics.
 
-- Experiences with enabling eBPF and XDP in Red Hat Enterprise Linux
-- Current status of the support
-- Remaining pain points
-  - Multiple XDP programs per interface
-  - XDP feature detection
-  - eBPF audit support
-  - Safety of the verifier
-  - Controlling eBPF capabilities
-  - Tooling and build environments
-  - Managing expectations - things XDP cannot (currently) do
+- Enabling XDP: kernel config, required packages
+- Supportability, bug reports handling
+- Security considerations and hardening
+- User experience and pain points
+- Managing user expectation
+
+Then we will look in depth into some of the problems.
+
+* Slide: Enabling XDP: kernel side                                   :export:
+
+Straigthforward: CONFIG_BPF_SYSCALL=y
+- XDP is always enabled
+- Enable AF_XDP: CONFIG_XDP_SOCKETS=y
+- Consider other networking BPF options
+  - CONFIG_CGROUP_BPF=y
+  - CONFIG_NET_ACT_BPF=m
+  - CONFIG_NET_CLS_BPF=m
+  - CONFIG_BPF_STREAM_PARSER=y
+  - CONFIG_LWTUNNEL_BPF=y
+
+* Slide: Enabling XDP: packages                                      :export:
+
+- Newest iproute2
+- bpftool
+  - part of the kernel source code
+  - but mostly independent
+  - similar to iproute2: no need for a dependency to a particular kernel version
+- clang/llvm with bpf backend
+  - BTF support is highly desirable
+- libbpf
+  - part of the kernel source code
+  - packageable as a library since kernel v5.1
+  - not much practical experience, yet
+
+* Slide: Enabling XDP: testing                                       :export:
+
+- CONFIG_TEST_BPF=m
+- tools/testing/selftests/bpf
+  - cumbersome to build and install
+- samples/bpf
+  - needs custom installation script
+  - some samples do not work out of kernel tree
+  - not much usable for testing overall
+
+* Slide: eBPF supportability: tools                                  :export:
+
+Introspection needed. bpftool provides that.
+- Essential to be installed on *all* systems.
+- But provides only the current state, not the history.
+
+sosreport
+- Calls bpftool since v3.5.1.
+- https://github.com/sosreport/sos
+
+crash
+- Understands eBPF since v7.2.2.
+- https://github.com/crash-utility/crash
+
+* Slide: eBPF supportability: bug reports                            :export:
+
+The kernel behaves differently with BPF programs loaded.
+
+How hard is to debug misbehaving system with buggy XDP programs loaded?
+
+Need to teach support engineers to look for BPF programs.
+- But that's the usual thing with any new technology.
+
+Distros need to create cheat sheets for users:
+- What to look for if packets are disappearing (XDP, tc, etc.)
+- What to look for if XDP programs are not working as expected.
+- etc.
+
+* Slide: eBPF supportability: audit trail                            :export:
+
+bpftool provides only the current state. The BPF program that caused issues (e.g. packet drops) may not be loaded anymore.
+
+Possible solution: enhancing the audit subsystem.
+- Patches currently stuck due to disagreement between bpf and audit maintainers.
+
+* Slide: eBPF security                                               :export:
+
+Two major areas of possible problems:
+
+1. Spectre class of hardware bugs.
+
+2. Verifier bugs.
+
+Hardening:
+- CONFIG_BPF_JIT_ALWAYS_ON=y to secure against malicious VMs.
+- Unprivileged users may load BPF programs. Is that a problem?
+
+* Slide: Unprivileged BPF                                            :export:
+
+Considerations:
+- Verifier bugs may be dangerous.
+- BPF has been used to ease creation of exploits of hardware bugs.
+- BPF developers are considering switching off unprivileged BPF as default.
+
+Turning off unprivileged BPF:
+- kernel.unprivileged_bpf_disabled=1
+- No way to set this by default in upstream kernel.
+- Needs to be set in a bootloader. Or use a distro specific patch.
+
+* Slide: Unprivileged BPF                                            :export:
+
+Problems:
+- Daemons manipulating maps need to be privileged.
+- Even when only reading maps.
+- Want to limit access to maps owned by other services.
+
+Possible solution: access rights for maps?
+
 
 * Slide: The high-level distro view                                  :export:
 
