--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -310,6 +310,7 @@ Possible solution: access rights for maps?
   - "What? Do I need to be a programmer to use XDP?"
 - tcpdump does not see all packets anymore.
   - XDP_DROP etc.
+  - There's no tcpdump-like feature for XDP.
 - Interface statistics do not count all packets anymore.
   - "It must be something on the wire!"
 - XDP programs do not reach the expected speed.
@@ -317,7 +318,8 @@ Possible solution: access rights for maps?
 
 * Slide: The pain points: developer experience                       :export:
 
-- Packets can be silently dropped even with correct XDP programs.
+- Packets can be silently dropped with XDP programs that are accepted as correct.
+  - Because of using unimplemented features.
   - What are the available XDP features on the interface?
 - XDP is not powerful enough.
   - Can't send packets.
@@ -329,6 +331,9 @@ Possible solution: access rights for maps?
 
 - User wants to install these two packages. But both are using XDP!
 - User is using XDP for custom filtering and now installed this package. It is using XDP, too.
+  - But only one XDP program per interface is supported.
+- Lack of community consensus on common libraries, build and devel environment.
+  - Risk of too much fragmentation, unpolished user experience.
 - virtio_net supports XDP but the performance is limited.
   - Can we have XDP passthrough?
   - Can we have XDP offloading from VM to NIC?
@@ -346,48 +351,6 @@ Distros need to focus on developers and encourage them to develop XDP based solu
 - Need more examples.
 - Need best practices.
 - Need education about limitations.
-
-
-* Slide: The high-level distro view                                  :export:
-
-eBPF *challenges* our normal /perspective/: kernel vs user-space
-
-Capabilities not good enough (*distro root-only*, open daemon attack surface)
-
-As distro; was hoping for /more mature BPF solutions/ (chicken & egg problem?)
-- Lacks community consensus on common libs, build and devel environment
-- Otherwise, too much flexibility risks fragmenting FOSS solutions
-
-BPFtool does BPF /feature probing/, but *this doesn't work with XDP*
-- Current situation without XDP feature check:
-  - Kernel allows users to *attach invalid XDP progs*, giving */silent drops/*
-- Deep dive later: Proposing a solution for XDP features
-
-** Slide: Specific XDP issues
-
-*Hard to troubleshoot* XDP without tcpdump-like facility
-- Today, Sysadm/FOSS-user needs to modify BPF prog to debug (unreasonable)
-
-XDP currently only supports *one program per interface*
-- As distro; need to support multiple FOSS projects
-- *Need* to: Establish /common way to "share" XDP hook/
-
-/Deep dive/: Multiple programs on one interface
-- Will also allow user to /load troubleshoot tcpdump-like program/
-
-* Slide: BPF technology challenges us!                               :export:
-
-BPF *challenges* normal /separation between kernel and user-space/
-- Running user-space supplied byte-code in kernel-space
-- Fully programmable, super flexible, but also scary
-
-BPF runtime is a /sandbox technology/ - which is why we allow this
-- Puts a lot of *trust in the BPF verifier*
-
-Is this a kind of /micro-kernel facility/?
-- Can it offer solutions in areas, where:
-  - kernel feature development is too slow
-  - kernel roll-out + reboot takes too long in production
 
 * Slide: Multiple XDP programs on a single interface                 :export:
 :PROPERTIES:
