conference: Switch to org-re-reveal emacs package for exporting slides
The org-reveal package is no longer maintained; org-re-reveal is the active
fork. Requires an updates to the title slide variable definitions in the
presentation files.

Also update the package versions of the other required emacs packages.

Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/FOSDEM2019/slides_examples.org
+++ b/conference/FOSDEM2019/slides_examples.org
@@ -234,7 +234,7 @@ Compare AF_XDP against DPDK performance
 * Emacs tricks
 
 # Local Variables:
-# org-reveal-title-slide: "<h1 class=\"title\">%t</h1>
+# org-re-reveal-title-slide: "<h1 class=\"title\">%t</h1>
 # <h2 class=\"author\">Jesper Dangaard Brouer (Red Hat)<br/></h2>
 # <h3>Data Examples<br/>in org-mode</h3>"
 # org-export-filter-headline-functions: ((lambda (contents backend info) (replace-regexp-in-string "Slide: " "" contents)))
