KR2019: Forgot some :export: tags
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/KernelRecipes2019/xdp-netstack-concert.org
+++ b/conference/KernelRecipes2019/xdp-netstack-concert.org
@@ -117,7 +117,7 @@ Why is this /better/, than other bypass solutions?
   - Move *selective* frames out of kernel, no need to reinject
 - /Leverages existing kernel infrastructure/, eco-system and market position
 
-* Slide: How can XDP be (ab)used?
+* Slide: How can XDP be (ab)used?                                    :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
@@ -126,7 +126,7 @@ Used or abused?
 - Freedom to bypass-kernel and re-implement everything
 - Or freedom to shoot yourself in the foot?
 
-** Slide: Simple view on XDP speed gains
+** Slide: Simple view on XDP speed gains                            :export:
 
 XDP gain speed from
 - Avoiding memory allocations
