--- a/conference/LinuxPlumbers2019/xdp-rh-team.org
+++ b/conference/LinuxPlumbers2019/xdp-rh-team.org
@@ -42,12 +42,42 @@ XDP is not first mover, but we believe XDP is /different and better/
  - Flexible sharing of NIC resources
  - /Killer feature/: Integration with Linux kernel
 
-* Slide: Framing: Our LPC talk - "[[https://www.linuxplumbersconf.org/event/4/contributions/460/][the distro view]]"
+* Slide: LPC talk: "[[https://www.linuxplumbersconf.org/event/4/contributions/460/][XDP: the distro view]]"                            :export:
+
+Issues from distro PoV:
+- Enabling XDP: kernel config, required packages
+- Supportability, bug reports handling
+- Security considerations and hardening
+- User experience and pain points
+- Managing user expectations
+
+Proposing solutions for:
+- Multiple XDP programs on one interface
+- XDP feature detection
+
+/For details/: Tuesday, 10 Sep 2019, 10:00 o'clock
+
+** Slide: Ongoing upstream development
+
+- [[https://linuxplumbersconf.org/event/4/contributions/462/][Making Networking Queues a First Class Citizen in the Kernel]]
+  - Tuesday 15:45 @ LPC
+- Porting iproute2 to libbpf
+- Unified statistics for XDP & network stack
+- Unifying driver memory handling (page_pool work)
+
+
+* Slide: The End                                                     :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
 
-Tuesday, 10 Sep 2019, 10:00 O'clock
+Next slide deck please...
+
+* Extra details (backup slides)                                      :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
 
 ** Slide: The high-level distro view                                :export:
 
@@ -76,7 +106,7 @@ XDP currently only supports *one program per interface*
 /In LPC talk/: Multiple programs on one interface
 - Will also allow user to /load troubleshoot tcpdump-like program/
 
-* Slide: Easier build and devel environment                          :export:
+** Slide: Easier build and devel environment                        :export:
 
 We want FOSS projects to share build and devel environments
 
@@ -87,7 +117,7 @@ With XDP focus, we have created a GitHub [[https://github.com/xdp-project/][XDP-
   - Build and test directly on your laptop via veth and network-namespaces
   - Recently added tracing examples too
 
-** Slide: Common BPF library: libbpf                                :noexport:
+** Slide: Common BPF library: libbpf
 
 We want to /reduce FOSS fragmentation/.
 
@@ -97,7 +127,7 @@ We want to /reduce FOSS fragmentation/.
 Solution:
 - *libbpf*: /promote as distro/ (want others to follow)
 
-* Slide: BPF technology challenges us!                               :export:
+* Slide: BPF technology challenges us!                             :noexport:
 
 #+BEGIN_NOTES
 We might want to skip this slide.
@@ -118,13 +148,6 @@ Is this a kind of /micro-kernel facility/?
 - Can it *offers solutions for customers* in areas, where:
   - Kernel feature development is too slow
   - Kernel roll-out + reboot takes too long in production
-
-* Slide: The End                                                     :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-Next slide deck please...
 
 * Notes
 
