--- a/conference/LinuxPlumbers2019/xdp-rh-team.org
+++ b/conference/LinuxPlumbers2019/xdp-rh-team.org
@@ -78,6 +78,9 @@ Next slide deck please...
 :reveal_extra_attr: class="mid-slide"
 :END:
 
+*No please*, not extra slides
+- /Lets take a break instead!/
+
 ** Slide: Easier build and devel environment                        :export:
 
 We want FOSS projects to share build and devel environments
@@ -88,6 +91,31 @@ With XDP focus, we have created a GitHub [[https://github.com/xdp-project/][XDP-
 - Subproject [[https://github.com/xdp-project/xdp-tutorial][XDP-tutorial]] with /easy build and devel environment/
   - Build and test directly on your laptop via veth and network-namespaces
   - Recently added tracing examples too
+
+Common BPF library: *libbpf*
+- /Promote as distro/ (want others to follow)
+
+** Slide: BPF technology challenges us!                           :export:
+
+#+BEGIN_NOTES
+We might want to skip this slide... use as backup slide
+#+END_NOTES
+
+@@html:<small>@@
+Inspirational thoughts about eBPF...
+@@html:</small>@@
+
+BPF *challenges* normal /separation between kernel and user-space/
+- Running user-space supplied byte-code in kernel-space
+- Fully programmable, super flexible, but also */scary/*
+
+BPF runtime is a /sandbox technology/ - which is why we allow this
+- Puts a lot of *trust in the BPF verifier*
+
+Is this a kind of /micro-kernel facility/?
+- Can it *offers solutions for customers* in areas, where:
+  - Kernel feature development is too slow
+  - Kernel roll-out + reboot takes too long in production
 
 ** Slide: The high-level distro view                                :export:
 
@@ -115,38 +143,6 @@ XDP currently only supports *one program per interface*
 
 /In LPC talk/: Multiple programs on one interface
 - Will also allow user to /load troubleshoot tcpdump-like program/
-
-** Slide: Common BPF library: libbpf
-
-We want to /reduce FOSS fragmentation/.
-
-- Ex: iproute2 has *incompatible ELF-maps format*
-  - WiP: convert iproute2 to use libbpf
-
-Solution:
-- *libbpf*: /promote as distro/ (want others to follow)
-
-* Slide: BPF technology challenges us!                             :noexport:
-
-#+BEGIN_NOTES
-We might want to skip this slide.
-#+END_NOTES
-
-@@html:<small>@@
-Inspirational thoughts about eBPF...
-@@html:</small>@@
-
-BPF *challenges* normal /separation between kernel and user-space/
-- Running user-space supplied byte-code in kernel-space
-- Fully programmable, super flexible, but also */scary/*
-
-BPF runtime is a /sandbox technology/ - which is why we allow this
-- Puts a lot of *trust in the BPF verifier*
-
-Is this a kind of /micro-kernel facility/?
-- Can it *offers solutions for customers* in areas, where:
-  - Kernel feature development is too slow
-  - Kernel roll-out + reboot takes too long in production
 
 * Notes
 
