LPC2019: xdp-rh-team: Upstream item: Move SKB allocations out of drivers
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2019/xdp-rh-team.org
+++ b/conference/LinuxPlumbers2019/xdp-rh-team.org
@@ -64,7 +64,7 @@ Proposing solutions for:
 - Porting iproute2 to libbpf
 - Unified statistics for XDP & network stack
 - Unifying driver memory handling (page_pool work)
-
+- Move SKB allocations out of drivers (depend meta-data for HW offloads)
 
 * Slide: The End                                                     :export:
 :PROPERTIES:
